10.5.x.x (relative to 10.5.6.2)
========



10.5.6.2 (relative to 10.5.6.1)
========

Fixes
-----

- USDScene : Fixed round-tripping of `ai:light` shader type for the output shader of light networks.

10.5.6.1 (relative to 10.5.6.0)
========

Fixes
-----

- USDScene : Fixed round-tripping of `__lights` set membership for non-UsdLux lights.
- DisplayDriverServer : Fixed delays connecting to the server on Windows.

Build
-----

- SConstruct : Support detection of OpenEXR versions with a patch version containing multiple digits.
- Fixed building with MSVC and Gaffer Dependencies 8.x.

10.5.6.0 (relative to 10.5.5.0)
========

Improvements
------------

- `IECoreGL::Selector`: Added constructor overload that accepts a boolean indicating a more precise, camera-space depth sample will be used to sample depth instead of OpenGL's depth buffer.
- `IECoreGL::ColorTexture`: Added new constructor that accepts an argument specifying the internal storage format to use.


10.5.5.0 (relative to 10.5.4.2)
========

Features
--------

- PyBindConverter : Added new class providing interoperability between Boost Python bindings and PyBind11 bindings.

Improvements
------------

- USDScene : Added basic loading of UsdGeomNurbsCurves, converting them to CurvesPrimitives.
- OStreamMessageHandler : Added level prefix to every line.

Fixes
-----

- CompoundObject : Fixed crashes in Python bindings caused by passing `None` as a key.
- VDBObject : Fixed Python bindings for OpenVDB 10.1.

10.5.4.2 (relative to 10.5.4.1)
========

Fixes
-----

- ExceptionAlgo : Fixed memory leak in `translatePythonException()`, which was failing to manage the reference count for exceptions bound by `IECorePython::ExceptionClass`.

10.5.4.1 (relative to 10.5.4.0)
========

Fixes
-----

- OpenImageIOAlgo : Properly handle empty metadata values.

10.5.4.0 (relative to 10.5.3.0)
========

Improvements
------------

- ShaderNetwork : Added support for InternedStringData attributes in string parameter substitutions.