@@ -1,7 +1,10 @@
 10.5.x.x (relative to 10.5.6.2)
 ========
 
+Fixes
+-----
 
+- SimpleTypedData : Fixed `repr()` for infinite values.
 
 10.5.6.2 (relative to 10.5.6.1)
 ========
